--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth0/auth0-react": "^1.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "firebase": "^8.6.3",
     "next": "^10.2.3",
     "react": "^17.0.2",
